--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,18 @@
   text-align: center;
 }
 
+body {
+  /* background-image: linear-gradient(to bottom,  #ffecd2 0%, #ffffff 100%); */
+
+  height: 75rem;
+  min-height: 100%;
+  /* display: flex; */
+  /* overflow: hidden; */
+  /* align-items: center; */
+  justify-content: center;
+
+}
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
@@ -21,4 +33,27 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+.MultipleValueTextInput {
+  background-color: #eee;
+  max-height: 100%;
+  overflow-x: scroll; /* Add the ability to scroll */
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.MultipleValueTextInput::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE and Edge */
+.MultipleValueTextInput {
+    -ms-overflow-style: none;
+}
+
+
+
+.Modal {
+  height: 70%;
+  overflow-y: scroll;
 }
